### 05-Aug-2015 MLS -- Version 3.3
    - WF3Rej for IR images, REJ_RATE reported in header wrong because nrej wasn't being initialized, see #1214
### 05-Aug-2015 MLS -- Version 3.3
    - Updates related to #1193, #1205
    - Clean up of getphttab.c file for unused variables
    - Clean up function references and unused variables in wfc3 code
    - photometry keyword update in all headers (#1101 addition) except for the remaining team decisions and how to deal with photplam and photbw-
    - photfnu is now calculated based on the chip value for phtflam[chip]
    - fix for association trailer file naming and concatination, see #1209
    - removed reference to save_crj because it really was just save_tmp
    - fix for crj tmp files not being removed when asked to delete

###  22-Jul-2015 MLS -- Version 3.3 
    - Full-frame CTE correction for UVIS images is enabled. This can be run stand-alone by calling wf3cte.e and turned on and off using the PCTECORR switch. Many new reference files were created and delivered to be used with this step and users should re-retrieve their raw datasets from the archive to make sure they get the most up-to-date science and reference files.
    - Photometry scaling via the FLUXCORR step is fully implemented. New reference files were created and delivered to be used with this step and users should re-retrieve their raw datasets from the archive to make sure they get the most up-to-date science and reference files.
    - The pipeline now runs twice by default, once with the CTE correction on and once with the CTE correction off. All output files are saved with *??c specifiers when the CTE correction has been applied to the data.
    - The CTE portion of the pipeline can be run with or without multithreading turned on. Having it on will greatly speed up the processing time for multicore machines.